# school-management-system

./: .gitignore  Dockerfile  main.py  pyproject.toml
backend/: .env.example  create_admin.py  create_schema.sql  requirements.txt  seed_data.py
backend-django/accounts/: models.py
backend-django/accounts/migrations/: 0001_initial.py
backend-django/core/: settings.py
backend/alembic/: env.py
backend/alembic/versions/: 3b5c2744d86f_initial_migration.py  693740e2e37c_initial_migration.py  ede47c7c1eb2_initial_commit.py  fd0a4201088a_fixing_models.py
backend/app/: crud.py  database.py  main.py  models.py  schemas.py
backend/app/api/routes/: auth.py
backend/app/core/: db.py  deps.py  security.py
backend/app/models/: __init__.py  admin.py  announcement.py  assignment.py  attendance.py  classes.py  event.py  exam.py  grade.py  lesson.py  parent.py  result.py  student.py  subject.py  teacher.py  user.py
backend/app/schemas/: __init__.py  token.py  user.py
frontend/: index.html  package.json  tailwind.config.js  vite.config.js
frontend/src/: App.js  App.jsx  index.css
frontend/src/components/announcements/: index.jsx
frontend/src/components/attendance/: index.jsx
frontend/src/components/attendance-chart/: index.jsx
frontend/src/components/count-chart/: index.jsx
frontend/src/components/event-calendar-container/: index.jsx
frontend/src/components/events/: index.jsx
frontend/src/components/finance-chart/: index.jsx
frontend/src/components/header/: index.jsx
frontend/src/components/layout/: index.jsx
frontend/src/components/login/: index.jsx
(+9 files in other folders)
