[project]
name = "school-management-system"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic==1.12.0",
    "asyncpg==0.28.0",
    "bcrypt==4.0.1",
    "djangorestframework>=3.16.0",
    "email-validator==2.0.0",
    "fastapi==0.103.1",
    "passlib==1.7.4",
    "pillow>=11.2.1",
    "pydantic[email]==2.3.0",
    "python-dotenv==1.0.0",
    "python-jose==3.3.0",
    "python-multipart==0.0.6",
    "sqlalchemy==2.0.20",
    "uvicorn==0.23.2",
]

[dependency-groups]
dev = [
    "ruff>=0.11.9",
]
